refactor: refactor discount code