@@ -5,12 +5,15 @@ import com.salshaikhi.discountservice.dto.DiscountRequest;
 import com.salshaikhi.discountservice.dto.DiscountResponse;
 import com.salshaikhi.discountservice.dto.ItemDto;
 import com.salshaikhi.discountservice.entity.Discount;
-import com.salshaikhi.discountservice.entity.DiscountCondition;
+import com.salshaikhi.discountservice.entity.FlatRateDiscount;
+import com.salshaikhi.discountservice.entity.PercentageBasedDiscount;
+import com.salshaikhi.discountservice.entity.enums.DiscountType;
 import com.salshaikhi.discountservice.entity.enums.UserType;
 import com.salshaikhi.discountservice.exception.DuplicateCodeException;
 import com.salshaikhi.discountservice.exception.NotFoundException;
 import com.salshaikhi.discountservice.mapper.DiscountMapper;
 import com.salshaikhi.discountservice.repository.DiscountRepository;
+import com.salshaikhi.discountservice.security.SecurityUtil;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,6 +24,8 @@ import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.mongodb.core.MongoTemplate;
 
 import java.time.Instant;
 import java.util.*;
@@ -40,7 +45,7 @@ public class DiscountServiceTests {
     @InjectMocks
     private DiscountService discountService;
 
-    private static MockedStatic<com.salshaikhi.discountservice.security.SecurityUtil> mockedStatic;
+    private static MockedStatic<SecurityUtil> mockedStatic;
     private static com.salshaikhi.discountservice.entity.User staticTestUser;
 
     @BeforeAll
@@ -52,8 +57,8 @@ public class DiscountServiceTests {
         staticTestUser.setEmail(email);
         staticTestUser.setUserType(userType);
         staticTestUser.setCreatedAt(createdAt);
-        mockedStatic = mockStatic(com.salshaikhi.discountservice.security.SecurityUtil.class);
-        mockedStatic.when(com.salshaikhi.discountservice.security.SecurityUtil::getUserEmail).thenReturn(email);
+        mockedStatic = mockStatic(SecurityUtil.class);
+        mockedStatic.when(SecurityUtil::getUserEmail).thenReturn(email);
     }
 
     @BeforeEach
@@ -76,13 +81,13 @@ public class DiscountServiceTests {
     void testGetAll_withDiscounts_returnsList() {
         // Arrange
         final String expectedDiscountId1 = "id1";
-        final Discount discount1 = new Discount();
+        final FlatRateDiscount discount1 = new FlatRateDiscount();
         discount1.setId(expectedDiscountId1);
         final DiscountResponse response1 = new DiscountResponse();
         when(discountMapper.discountToResponse(discount1)).thenReturn(response1);
 
         final String expectedDiscountId2 = "id2";
-        final Discount discount2 = new Discount();
+        final PercentageBasedDiscount discount2 = new PercentageBasedDiscount();
         discount2.setId(expectedDiscountId2);
         final DiscountResponse response2 = new DiscountResponse();
         when(discountMapper.discountToResponse(discount2)).thenReturn(response2);
@@ -104,28 +109,22 @@ public class DiscountServiceTests {
         final String expectedCode = "CODE123";
         final String expectedDescription = "Test discount";
         final double expectedAmount = 15.5;
-        final boolean expectedIsPercentage = true;
         final boolean expectedActive = true;
         final Instant expectedExpiryDate = Instant.parse("2025-12-31T23:59:59Z");
         final Instant expectedCreatedAt = Instant.parse("2025-01-01T00:00:00Z");
         final Instant expectedUpdatedAt = Instant.parse("2025-10-29T00:00:00Z");
-        final DiscountCondition expectedCondition = new DiscountCondition();
-        expectedCondition.setMinAccountAgeYears(2);
-        expectedCondition.setUserType(UserType.EMPLOYEE);
-        expectedCondition.setPerAmountSpent(100.0);
-        expectedCondition.setExcludedCategories(Set.of("grocery"));
 
-        final Discount expectedDiscount = new Discount();
+        final FlatRateDiscount expectedDiscount = new FlatRateDiscount();
         expectedDiscount.setId(expectedDiscountId);
         expectedDiscount.setCode(expectedCode);
         expectedDiscount.setDescription(expectedDescription);
         expectedDiscount.setAmount(expectedAmount);
-        expectedDiscount.setPercentage(expectedIsPercentage);
         expectedDiscount.setActive(expectedActive);
         expectedDiscount.setExpiryDate(expectedExpiryDate);
         expectedDiscount.setCreatedAt(expectedCreatedAt);
         expectedDiscount.setUpdatedAt(expectedUpdatedAt);
-        expectedDiscount.setCondition(expectedCondition);
+        expectedDiscount.setMinAccountAgeYears(2);
+        expectedDiscount.setPerAmountSpent(100.0);
 
         when(discountRepository.findById(expectedDiscountId)).thenReturn(Optional.of(expectedDiscount));
         // Act
@@ -136,34 +135,90 @@ public class DiscountServiceTests {
         assertEquals(expectedCode, result.getCode());
         assertEquals(expectedDescription, result.getDescription());
         assertEquals(expectedAmount, result.getAmount());
-        assertEquals(expectedIsPercentage, result.isPercentage());
         assertEquals(expectedActive, result.isActive());
         assertEquals(expectedExpiryDate, result.getExpiryDate());
         assertEquals(expectedCreatedAt, result.getCreatedAt());
         assertEquals(expectedUpdatedAt, result.getUpdatedAt());
-        assertNotNull(result.getCondition());
-        assertEquals(expectedCondition.getMinAccountAgeYears(), result.getCondition().getMinAccountAgeYears());
-        assertEquals(expectedCondition.getUserType(), result.getCondition().getUserType());
-        assertEquals(expectedCondition.getPerAmountSpent(), result.getCondition().getPerAmountSpent());
-        assertEquals(expectedCondition.getExcludedCategories(), result.getCondition().getExcludedCategories());
+        assertTrue(result instanceof FlatRateDiscount);
+        FlatRateDiscount flatRate = (FlatRateDiscount) result;
+        assertEquals(2, flatRate.getMinAccountAgeYears());
+        assertEquals(100.0, flatRate.getPerAmountSpent());
     }
 
     @Test
-    void testCreateDiscount_withValidRequest_discountCreatedSuccessfully() {
+    void testCreatePercentageBasedDiscount_withValidRequest_discountCreatedSuccessfully() {
         // Arrange
-        final String expectedCode = "CODE1";
-        final DiscountRequest request = mock(DiscountRequest.class);
-        final Discount expectedDiscount = new Discount();
+        final String expectedCode = "EMPLOYEE30";
+        final DiscountRequest request = new DiscountRequest();
+        request.setCode(expectedCode);
+        request.setDescription("30% off for employees");
+        request.setAmount(30.0);
+        request.setDiscountType(DiscountType.PERCENTAGE_BASED);
+        request.setActive(true);
+        request.setExpiryDate(Instant.now().plusSeconds(86400)); // 1 day from now
+        request.setUserType(UserType.EMPLOYEE);
+        request.setExcludedCategories(Set.of("Groceries"));
+
+        final PercentageBasedDiscount expectedDiscount = new PercentageBasedDiscount();
+        expectedDiscount.setCode(expectedCode);
+        expectedDiscount.setUserType(UserType.EMPLOYEE);
+        expectedDiscount.setExcludedCategories(Set.of("Groceries"));
+
         final DiscountResponse expectedResponse = new DiscountResponse();
-        when(request.getCode()).thenReturn(expectedCode);
+        expectedResponse.setCode(expectedCode);
+        expectedResponse.setDiscountType(DiscountType.PERCENTAGE_BASED);
+
         when(discountRepository.existsByCodeIgnoreCase(expectedCode)).thenReturn(false);
-        when(discountRepository.save(any(Discount.class))).thenReturn(expectedDiscount);
+        when(discountRepository.save(any(PercentageBasedDiscount.class))).thenReturn(expectedDiscount);
         when(discountMapper.discountToResponse(any(Discount.class))).thenReturn(expectedResponse);
-        doAnswer(invocation -> null).when(discountMapper).requestToDiscount(any(), any());
+        when(discountMapper.requestToDiscount(eq(request), any(PercentageBasedDiscount.class))).thenReturn(expectedDiscount);
+
         // Act
         DiscountResponse result = discountService.create(request);
+
         // Assert
         assertEquals(expectedResponse, result);
+        verify(discountRepository).save(any(PercentageBasedDiscount.class));
+        verify(discountMapper).requestToDiscount(eq(request), any(PercentageBasedDiscount.class));
+        verify(discountMapper).discountToResponse(expectedDiscount);
+    }
+
+    @Test
+    void testCreateFlatRateDiscount_withValidRequest_discountCreatedSuccessfully() {
+        // Arrange
+        final String expectedCode = "FLAT5";
+        final DiscountRequest request = new DiscountRequest();
+        request.setCode(expectedCode);
+        request.setDescription("$5 off for every $100 spent");
+        request.setAmount(5.0);
+        request.setDiscountType(DiscountType.FLAT_RATE);
+        request.setActive(true);
+        request.setExpiryDate(Instant.now().plusSeconds(86400)); // 1 day from now
+        request.setMinAccountAgeYears(2);
+        request.setPerAmountSpent(100.0);
+
+        final FlatRateDiscount expectedDiscount = new FlatRateDiscount();
+        expectedDiscount.setCode(expectedCode);
+        expectedDiscount.setMinAccountAgeYears(2);
+        expectedDiscount.setPerAmountSpent(100.0);
+
+        final DiscountResponse expectedResponse = new DiscountResponse();
+        expectedResponse.setCode(expectedCode);
+        expectedResponse.setDiscountType(DiscountType.FLAT_RATE);
+
+        when(discountRepository.existsByCodeIgnoreCase(expectedCode)).thenReturn(false);
+        when(discountRepository.save(any(FlatRateDiscount.class))).thenReturn(expectedDiscount);
+        when(discountMapper.discountToResponse(any(Discount.class))).thenReturn(expectedResponse);
+        when(discountMapper.requestToDiscount(eq(request), any(FlatRateDiscount.class))).thenReturn(expectedDiscount);
+
+        // Act
+        DiscountResponse result = discountService.create(request);
+
+        // Assert
+        assertEquals(expectedResponse, result);
+        verify(discountRepository).save(any(FlatRateDiscount.class));
+        verify(discountMapper).requestToDiscount(eq(request), any(FlatRateDiscount.class));
+        verify(discountMapper).discountToResponse(expectedDiscount);
     }
 
     @Test
@@ -182,7 +237,7 @@ public class DiscountServiceTests {
         // Arrange
         final String expectedDiscountId = "id";
         final DiscountRequest request = mock(DiscountRequest.class);
-        final Discount expectedDiscount = new Discount();
+        final FlatRateDiscount expectedDiscount = new FlatRateDiscount();
         final DiscountResponse expectedResponse = new DiscountResponse();
         when(discountRepository.findById(expectedDiscountId)).thenReturn(Optional.of(expectedDiscount));
         when(discountRepository.save(any(Discount.class))).thenReturn(expectedDiscount);
@@ -224,15 +279,13 @@ public class DiscountServiceTests {
         final double expectedItem2Price = 50.0;
         final int expectedItem2Quantity = 1;
         final String expectedFlatDiscountCode = "FLAT10";
-        final double expectedFlatDiscountAmount = 5.0; // changed from 10.0 to 5.0
+        final double expectedFlatDiscountAmount = 5.0;
         final double expectedFlatDiscountPerAmount = 100.0;
         final String expectedPercentDiscountCode = "EMP20";
-        final double expectedPercentDiscountAmount = 30.0; // changed from 20.0 to 30.0
+        final double expectedPercentDiscountAmount = 30.0;
         final String expectedExcludedCategory = expectedCategoryGrocery;
         final UserType expectedUserType = UserType.EMPLOYEE;
         final double expectedTotalPrice = 250.0;
-        // Flat: $5 per $100, so $10. Percent: 30% on electronics only (200*0.3 = $60). Total discount: $70
-        final double expectedAmountAfterDiscount = 180.0;
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item1 = new ItemDto();
@@ -247,36 +300,32 @@ public class DiscountServiceTests {
         bill.setItems(Arrays.asList(item1, item2));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition flatCond = new DiscountCondition();
-        flatCond.setPerAmountSpent(expectedFlatDiscountPerAmount);
-        Discount flatDiscount = new Discount();
+        FlatRateDiscount flatDiscount = new FlatRateDiscount();
         flatDiscount.setCode(expectedFlatDiscountCode);
         flatDiscount.setAmount(expectedFlatDiscountAmount);
-        flatDiscount.setPercentage(false);
         flatDiscount.setActive(true);
         flatDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount.setCondition(flatCond);
+        flatDiscount.setPerAmountSpent(expectedFlatDiscountPerAmount);
+        flatDiscount.setMinAccountAgeYears(2);
 
-        DiscountCondition percentCond = new DiscountCondition();
-        percentCond.setUserType(expectedUserType);
-        percentCond.setExcludedCategories(Set.of(expectedExcludedCategory));
-        Discount percentDiscount = new Discount();
+        PercentageBasedDiscount percentDiscount = new PercentageBasedDiscount();
         percentDiscount.setCode(expectedPercentDiscountCode);
         percentDiscount.setAmount(expectedPercentDiscountAmount);
-        percentDiscount.setPercentage(true);
         percentDiscount.setActive(true);
         percentDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount.setCondition(percentCond);
+        percentDiscount.setUserType(expectedUserType);
+        percentDiscount.setExcludedCategories(Set.of(expectedExcludedCategory));
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(List.of(flatDiscount));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(List.of(percentDiscount));
+        when(discountRepository.findAllFlatRateDiscounts()).thenReturn(Arrays.asList(flatDiscount));
+        when(discountRepository.findAllPercentageBasedDiscounts()).thenReturn(Arrays.asList(percentDiscount));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        // Flat: $5 per $100, so $10. Percent: 30% on electronics only (200*0.3 = $60). Total discount: $70
+        assertEquals(180.0, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().contains(expectedFlatDiscountCode));
         assertTrue(result.getAppliedDiscounts().contains(expectedPercentDiscountCode));
     }
@@ -288,7 +337,7 @@ public class DiscountServiceTests {
         final double expectedItemPrice = 50.0;
         final int expectedItemQuantity = 1;
         final double expectedTotalPrice = 50.0;
-        final double expectedAmountAfterDiscount = 50.0;
+        final double expectedPriceAfterDiscount = 50.0;
 
         ItemDto item = new ItemDto();
         item.setCategory(expectedCategoryGrocery);
@@ -297,15 +346,14 @@ public class DiscountServiceTests {
         BillDto bill = new BillDto();
         bill.setItems(List.of(item));
         bill.setAppliedDiscounts(new ArrayList<>());
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Collections.emptyList());
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
+        when(discountRepository.findAll()).thenReturn(Collections.emptyList());
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().isEmpty());
     }
 
@@ -322,8 +370,8 @@ public class DiscountServiceTests {
         final UserType expectedUserType = UserType.EMPLOYEE;
         final double expectedTotalPrice = 200.0;
         // Only the highest percent (30%) should apply: 200 * 0.3 = 60
-        final double expectedAmountAfterDiscount = 140.0;
-        final long expectedExpirySeconds = 3600L;
+        final double expectedPriceAfterDiscount = 140.0;
+        final Instant expectedExpiryDate = Instant.parse("2026-12-31T23:59:59Z");
 
         ItemDto item1 = new ItemDto();
         item1.setCategory(expectedCategoryElectronics);
@@ -333,33 +381,28 @@ public class DiscountServiceTests {
         bill.setItems(Arrays.asList(item1));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition percentCond = new DiscountCondition();
-        percentCond.setUserType(expectedUserType);
-        Discount percentDiscount1 = new Discount();
+        PercentageBasedDiscount percentDiscount1 = new PercentageBasedDiscount();
         percentDiscount1.setCode(expectedPercentDiscountCode1);
         percentDiscount1.setAmount(expectedPercentDiscountAmount1);
-        percentDiscount1.setPercentage(true);
         percentDiscount1.setActive(true);
-        percentDiscount1.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount1.setCondition(percentCond);
+        percentDiscount1.setExpiryDate(expectedExpiryDate);
+        percentDiscount1.setUserType(expectedUserType);
 
-        Discount percentDiscount2 = new Discount();
+        PercentageBasedDiscount percentDiscount2 = new PercentageBasedDiscount();
         percentDiscount2.setCode(expectedPercentDiscountCode2);
         percentDiscount2.setAmount(expectedPercentDiscountAmount2);
-        percentDiscount2.setPercentage(true);
         percentDiscount2.setActive(true);
-        percentDiscount2.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount2.setCondition(percentCond);
+        percentDiscount2.setExpiryDate(expectedExpiryDate);
+        percentDiscount2.setUserType(expectedUserType);
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Collections.emptyList());
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Arrays.asList(percentDiscount1, percentDiscount2));
+        when(discountRepository.findAllPercentageBasedDiscounts()).thenReturn(Arrays.asList(percentDiscount1, percentDiscount2));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertFalse(result.getAppliedDiscounts().contains(expectedPercentDiscountCode1));
         assertTrue(result.getAppliedDiscounts().contains(expectedPercentDiscountCode2));
     }
@@ -378,7 +421,7 @@ public class DiscountServiceTests {
         final double expectedFlatDiscountPerAmount2 = 200.0;
         final double expectedTotalPrice = 200.0;
         // FLAT5: $5 per $100, so $10. FLAT10: $10 per $200, so $10. Total discount: $20
-        final double expectedAmountAfterDiscount = 180.0;
+        final double expectedPriceAfterDiscount = 180.0;
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item1 = new ItemDto();
@@ -389,35 +432,30 @@ public class DiscountServiceTests {
         bill.setItems(Arrays.asList(item1));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition flatCond1 = new DiscountCondition();
-        flatCond1.setPerAmountSpent(expectedFlatDiscountPerAmount1);
-        Discount flatDiscount1 = new Discount();
+        FlatRateDiscount flatDiscount1 = new FlatRateDiscount();
         flatDiscount1.setCode(expectedFlatDiscountCode1);
         flatDiscount1.setAmount(expectedFlatDiscountAmount1);
-        flatDiscount1.setPercentage(false);
         flatDiscount1.setActive(true);
         flatDiscount1.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount1.setCondition(flatCond1);
+        flatDiscount1.setPerAmountSpent(expectedFlatDiscountPerAmount1);
+        flatDiscount1.setMinAccountAgeYears(2);
 
-        DiscountCondition flatCond2 = new DiscountCondition();
-        flatCond2.setPerAmountSpent(expectedFlatDiscountPerAmount2);
-        Discount flatDiscount2 = new Discount();
+        FlatRateDiscount flatDiscount2 = new FlatRateDiscount();
         flatDiscount2.setCode(expectedFlatDiscountCode2);
         flatDiscount2.setAmount(expectedFlatDiscountAmount2);
-        flatDiscount2.setPercentage(false);
         flatDiscount2.setActive(true);
         flatDiscount2.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount2.setCondition(flatCond2);
+        flatDiscount2.setPerAmountSpent(expectedFlatDiscountPerAmount2);
+        flatDiscount2.setMinAccountAgeYears(2);
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Arrays.asList(flatDiscount1, flatDiscount2));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
+        when(discountRepository.findAllFlatRateDiscounts()).thenReturn(Arrays.asList(flatDiscount1, flatDiscount2));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().contains(expectedFlatDiscountCode1));
         assertTrue(result.getAppliedDiscounts().contains(expectedFlatDiscountCode2));
     }
@@ -435,7 +473,7 @@ public class DiscountServiceTests {
         final UserType expectedUserType = UserType.EMPLOYEE;
         final double expectedTotalPrice = 250.0;
         // No discounts should apply, as all items are excluded from percent and there are no flat discounts
-        final double expectedAmountAfterDiscount = 250.0;
+        final double expectedPriceAfterDiscount = 250.0;
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item1 = new ItemDto();
@@ -450,26 +488,22 @@ public class DiscountServiceTests {
         bill.setItems(Arrays.asList(item1, item2));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition percentCond = new DiscountCondition();
-        percentCond.setUserType(expectedUserType);
-        percentCond.setExcludedCategories(Set.of(expectedCategoryGrocery));
-        Discount percentDiscount = new Discount();
+        PercentageBasedDiscount percentDiscount = new PercentageBasedDiscount();
         percentDiscount.setCode(expectedPercentDiscountCode);
         percentDiscount.setAmount(expectedPercentDiscountAmount);
-        percentDiscount.setPercentage(true);
         percentDiscount.setActive(true);
         percentDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount.setCondition(percentCond);
+        percentDiscount.setUserType(expectedUserType);
+        percentDiscount.setExcludedCategories(Set.of(expectedCategoryGrocery));
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Collections.emptyList());
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(List.of(percentDiscount));
+        when(discountRepository.findAll()).thenReturn(List.of(percentDiscount));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().isEmpty());
     }
 
@@ -477,7 +511,7 @@ public class DiscountServiceTests {
     void testGetDiscountResponse_withExistingDiscount_returnsDiscountResponse() {
         // Arrange
         final String discountId = "id";
-        final Discount discount = new Discount();
+        final FlatRateDiscount discount = new FlatRateDiscount();
         final DiscountResponse response = new DiscountResponse();
         when(discountRepository.findById(discountId)).thenReturn(Optional.of(discount));
         when(discountMapper.discountToResponse(discount)).thenReturn(response);
@@ -497,7 +531,7 @@ public class DiscountServiceTests {
         final double expectedFlatDiscountAmount = 10.0;
         final double expectedFlatDiscountPerAmount = 100.0;
         final double expectedTotalPrice = 200.0;
-        final double expectedAmountAfterDiscount = 180.0; // $10 per $100, so $20 off
+        final double expectedPriceAfterDiscount = 180.0; // $10 per $100, so $20 off
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item = new ItemDto();
@@ -508,25 +542,22 @@ public class DiscountServiceTests {
         bill.setItems(List.of(item));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition flatCond = new DiscountCondition();
-        flatCond.setPerAmountSpent(expectedFlatDiscountPerAmount);
-        Discount flatDiscount = new Discount();
+        FlatRateDiscount flatDiscount = new FlatRateDiscount();
         flatDiscount.setCode(expectedFlatDiscountCode);
         flatDiscount.setAmount(expectedFlatDiscountAmount);
-        flatDiscount.setPercentage(false);
         flatDiscount.setActive(true);
         flatDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount.setCondition(flatCond);
+        flatDiscount.setPerAmountSpent(expectedFlatDiscountPerAmount);
+        flatDiscount.setMinAccountAgeYears(2);
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(List.of(flatDiscount));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
+        when(discountRepository.findAllFlatRateDiscounts()).thenReturn(List.of(flatDiscount));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().contains(expectedFlatDiscountCode));
     }
 
@@ -540,7 +571,7 @@ public class DiscountServiceTests {
         final double expectedPercentDiscountAmount = 20.0;
         final UserType expectedUserType = UserType.EMPLOYEE;
         final double expectedTotalPrice = 200.0;
-        final double expectedAmountAfterDiscount = 160.0; // 20% off 200
+        final double expectedPriceAfterDiscount = 160.0; // 20% off 200
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item = new ItemDto();
@@ -551,26 +582,22 @@ public class DiscountServiceTests {
         bill.setItems(List.of(item));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition percentCond = new DiscountCondition();
-        percentCond.setUserType(expectedUserType);
-        percentCond.setExcludedCategories(Collections.emptySet());
-        Discount percentDiscount = new Discount();
+        PercentageBasedDiscount percentDiscount = new PercentageBasedDiscount();
         percentDiscount.setCode(expectedPercentDiscountCode);
         percentDiscount.setAmount(expectedPercentDiscountAmount);
-        percentDiscount.setPercentage(true);
         percentDiscount.setActive(true);
         percentDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount.setCondition(percentCond);
+        percentDiscount.setUserType(expectedUserType);
+        percentDiscount.setExcludedCategories(Collections.emptySet());
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Collections.emptyList());
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(List.of(percentDiscount));
+        when(discountRepository.findAllPercentageBasedDiscounts()).thenReturn(List.of(percentDiscount));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().contains(expectedPercentDiscountCode));
     }
 
@@ -584,7 +611,7 @@ public class DiscountServiceTests {
         final double expectedPercentDiscountAmount = 20.0;
         final UserType expectedUserType = UserType.EMPLOYEE;
         final double expectedTotalPrice = 200.0;
-        final double expectedAmountAfterDiscount = 200.0; // No discount
+        final double expectedPriceAfterDiscount = 200.0; // No discount
         final long expectedExpirySeconds = 3600L;
 
         ItemDto item = new ItemDto();
@@ -595,159 +622,22 @@ public class DiscountServiceTests {
         bill.setItems(List.of(item));
         bill.setAppliedDiscounts(new ArrayList<>());
 
-        DiscountCondition percentCond = new DiscountCondition();
-        percentCond.setUserType(expectedUserType);
-        percentCond.setExcludedCategories(Set.of(excludedCategory));
-        Discount percentDiscount = new Discount();
+        PercentageBasedDiscount percentDiscount = new PercentageBasedDiscount();
         percentDiscount.setCode(expectedPercentDiscountCode);
         percentDiscount.setAmount(expectedPercentDiscountAmount);
-        percentDiscount.setPercentage(true);
         percentDiscount.setActive(true);
         percentDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        percentDiscount.setCondition(percentCond);
+        percentDiscount.setUserType(expectedUserType);
+        percentDiscount.setExcludedCategories(Set.of(excludedCategory));
 
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(Collections.emptyList());
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(List.of(percentDiscount));
-
-        // Act
-        BillDto result = discountService.applyDiscount(bill);
-
-        // Assert
-        assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
-        assertTrue(result.getAppliedDiscounts().isEmpty());
-    }
-
-    @Test
-    void testApplyDiscount_withInactiveDiscount_noDiscountApplied() {
-        // Arrange
-        final String expectedCategory = "electronics";
-        final double expectedItemPrice = 100.0;
-        final int expectedItemQuantity = 1;
-        final String expectedFlatDiscountCode = "FLAT10";
-        final double expectedFlatDiscountAmount = 10.0;
-        final double expectedFlatDiscountPerAmount = 100.0;
-        final double expectedTotalPrice = 100.0;
-        final double expectedAmountAfterDiscount = 100.0;
-        final long expectedExpirySeconds = 3600L;
-
-        ItemDto item = new ItemDto();
-        item.setCategory(expectedCategory);
-        item.setPrice(expectedItemPrice);
-        item.setQuantity(expectedItemQuantity);
-        BillDto bill = new BillDto();
-        bill.setItems(List.of(item));
-        bill.setAppliedDiscounts(new ArrayList<>());
-
-        DiscountCondition flatCond = new DiscountCondition();
-        flatCond.setPerAmountSpent(expectedFlatDiscountPerAmount);
-        Discount flatDiscount = new Discount();
-        flatDiscount.setCode(expectedFlatDiscountCode);
-        flatDiscount.setAmount(expectedFlatDiscountAmount);
-        flatDiscount.setPercentage(false);
-        flatDiscount.setActive(false); // inactive
-        flatDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount.setCondition(flatCond);
-
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(List.of(flatDiscount));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
+        when(discountRepository.findAll()).thenReturn(List.of(percentDiscount));
 
         // Act
         BillDto result = discountService.applyDiscount(bill);
 
         // Assert
         assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
-        assertTrue(result.getAppliedDiscounts().isEmpty());
-    }
-
-    @Test
-    void testApplyDiscount_withExpiredDiscount_noDiscountApplied() {
-        // Arrange
-        final String expectedCategory = "electronics";
-        final double expectedItemPrice = 100.0;
-        final int expectedItemQuantity = 1;
-        final String expectedFlatDiscountCode = "FLAT10";
-        final double expectedFlatDiscountAmount = 10.0;
-        final double expectedFlatDiscountPerAmount = 100.0;
-        final double expectedTotalPrice = 100.0;
-        final double expectedAmountAfterDiscount = 100.0;
-
-        ItemDto item = new ItemDto();
-        item.setCategory(expectedCategory);
-        item.setPrice(expectedItemPrice);
-        item.setQuantity(expectedItemQuantity);
-        BillDto bill = new BillDto();
-        bill.setItems(List.of(item));
-        bill.setAppliedDiscounts(new ArrayList<>());
-
-        DiscountCondition flatCond = new DiscountCondition();
-        flatCond.setPerAmountSpent(expectedFlatDiscountPerAmount);
-        Discount flatDiscount = new Discount();
-        flatDiscount.setCode(expectedFlatDiscountCode);
-        flatDiscount.setAmount(expectedFlatDiscountAmount);
-        flatDiscount.setPercentage(false);
-        flatDiscount.setActive(true);
-        flatDiscount.setExpiryDate(Instant.now().minusSeconds(3600)); // expired
-        flatDiscount.setCondition(flatCond);
-
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(List.of(flatDiscount));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
-
-        // Act
-        BillDto result = discountService.applyDiscount(bill);
-
-        // Assert
-        assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
-        assertTrue(result.getAppliedDiscounts().isEmpty());
-    }
-
-    @Test
-    void testApplyDiscount_withUserTypeNotMatching_noDiscountApplied() {
-        // Arrange
-        final String expectedCategory = "electronics";
-        final double expectedItemPrice = 100.0;
-        final int expectedItemQuantity = 1;
-        final String expectedFlatDiscountCode = "FLAT10";
-        final double expectedFlatDiscountAmount = 10.0;
-        final double expectedFlatDiscountPerAmount = 100.0;
-        final double expectedTotalPrice = 100.0;
-        final double expectedAmountAfterDiscount = 100.0;
-        final long expectedExpirySeconds = 3600L;
-
-        ItemDto item = new ItemDto();
-        item.setCategory(expectedCategory);
-        item.setPrice(expectedItemPrice);
-        item.setQuantity(expectedItemQuantity);
-        BillDto bill = new BillDto();
-        bill.setItems(List.of(item));
-        bill.setAppliedDiscounts(new ArrayList<>());
-
-        DiscountCondition flatCond = new DiscountCondition();
-        flatCond.setPerAmountSpent(expectedFlatDiscountPerAmount);
-        flatCond.setUserType(UserType.AFFILIATE); // discount for AFFILIATE
-        Discount flatDiscount = new Discount();
-        flatDiscount.setCode(expectedFlatDiscountCode);
-        flatDiscount.setAmount(expectedFlatDiscountAmount);
-        flatDiscount.setPercentage(false);
-        flatDiscount.setActive(true);
-        flatDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount.setCondition(flatCond);
-
-        flatDiscount.setExpiryDate(Instant.now().plusSeconds(expectedExpirySeconds));
-        flatDiscount.setCondition(flatCond);
-
-        when(discountRepository.findByIsPercentageOrderByAmount(false)).thenReturn(List.of(flatDiscount));
-        when(discountRepository.findByIsPercentageOrderByAmount(true)).thenReturn(Collections.emptyList());
-
-        // Act
-        BillDto result = discountService.applyDiscount(bill);
-
-        // Assert
-        assertEquals(expectedTotalPrice, result.getTotalPrice());
-        assertEquals(expectedAmountAfterDiscount, result.getAmountAfterDiscount());
+        assertEquals(expectedPriceAfterDiscount, result.getPriceAfterDiscount());
         assertTrue(result.getAppliedDiscounts().isEmpty());
     }
 }
-
